# SeismoStats

./: .flake8  .gitignore  .readthedocs.yaml  .setup.cfg.swp  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  catalog_Tools.ipynb  essential_manual.ipynb  extended_manual.ipynb  manual.ipynb  pyproject.toml  pyvenv.cfg  requirements.txt  setup.cfg  test.csv  test.py  tox.ini
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _tests.yml  action.yml  publish.yml  tests.yml
catalog_tools/: __init__.py  catalog.py  rategrid.py
catalog_tools/analysis/: estimate_beta.py  estimate_mc.py
catalog_tools/analysis/tests/: test_estimate_beta.py  test_estimate_mc.py  test_magnitudes.py
catalog_tools/b_value/: estimate_beta.py
catalog_tools/b_value/tests/: test_estimate_beta.py
catalog_tools/data/: swiss_catalog.csv
catalog_tools/download/: __init__.py  download_catalogs.py  download_qml.py
catalog_tools/download/tests/: test_download_catalogs.py  test_download_catalogues.py
catalog_tools/download/tests/data/: catalog.csv  catalog_sed.csv
catalog_tools/io/: client.py  parser.py
catalog_tools/io/tests/: query.xml  test_client.py  test_parser.py
catalog_tools/plots/: __init__.py  basics.py  seismicity.py  statistical.py
catalog_tools/plots/tests/: test_basics.py
catalog_tools/plotting/: mag_time_density.py
catalog_tools/plotting/tests/: test_mag_time_density.py
catalog_tools/plotting/tests/data/: test_completeness_catalogue.csv
catalog_tools/recurrence/: wls.py
catalog_tools/recurrence/tests/: test_wls.py
catalog_tools/seismicity/: catalog.py  rategrid.py
catalog_tools/seismicity/catalog_templates/: quakeml.j2
catalog_tools/seismicity/tests/: test_catalog.py  test_rategrid.py
catalog_tools/tests/: test_catalog.py  test_estimate_beta.py  test_rategrid.py
catalog_tools/utils/: __init__.py  binning.py  coordinates.py  filtering.py  simulate_distributions.py
catalog_tools/utils/tests/: test_binning.py  test_coordinate_transformer.py  test_filtering.py  test_require_cols.py
catalogue_tools/b_value/: estimate_beta.py
catalogue_tools/b_value/tests/: test_estimate_beta.py
catalogue_tools/download/: download_catalogues.py
catalogue_tools/download/tests/: test_download_catalogues.py
catalogue_tools/plotting/: mag_time_density.py
catalogue_tools/plotting/tests/: mag_time_density.py  test_mag_time_density.py
catalogue_tools/recurrence/: wls.py
catalogue_tools/recurrence/tests/: test_wls.py
catalogue_tools/utils/: simulate_distributions.py
docs/: Makefile
docs/source/: api.md  changelog.md  conf.py  index.md  index.rst  usage.md  usage.rst
docs/source/_templates/autosummary/: base.rst  class.rst  class_notoctree.rst
docs/source/notebooks/: SeismoStats.nblink  catalog_Tools.nblink  catalog_examples.ipynb  catalog_examples.nblink  manual.nblink
docs/source/reference/: analysis.md  avalues.md  bvalues.md  catalog.md  client.md  config.md  index.md  mc.md  plots.md  utils.md
docs/source/reference/analysis/: analysis.md  avalues.md  bvalues.md  declustering.md  mc.md  various.md
docs/source/reference/formats/: catalog.md  forecastcatalog.md  forecastgrrategrid.md  formats.md  grrategrid.md
docs/source/user/: 10minute_intro.md  b_significant.md  catalogs.md  contributing.md  dataformats.md  docs.md  estimate_a.md  estimate_b.md  estimate_mc.md  examples.md  getting_started.md  index.md  ks-test.md  plots.md  synthetic.md  usage.md  what_is_seismostats.md
notebooks/: SeismoStats.ipynb  catalog_Tools.ipynb  catalog_examples.ipynb  manual copy.ipynb  manual.ipynb
notebooks/data/: catalog_usgs.csv
seismostats/: __init__.py
seismostats/analysis/: __init__.py  b_significant.py  estimate_a.py  estimate_beta.py  estimate_mc.py  ks_test.py  lilliefors.py  magnitudes.py
seismostats/analysis/avalue/: __init__.py  base.py  classic.py  more_positive.py  positive.py
seismostats/analysis/avalue/tests/: test_avalue.py  test_base.py
seismostats/analysis/b_values/: base.py  classic.py  estimate.py  positive.py
seismostats/analysis/bvalue/: __init__.py  base.py  classic.py  kijko_smit.py  more_positive.py  positive.py  test.ipynb  utils.py  utsu.py  weichert.py
seismostats/analysis/bvalue/tests/: test_base.py  test_bvalues.py  test_estimate_beta.py  test_period_mc.py  test_utils.py
seismostats/analysis/declustering/: __init__.py  base.py  dec_afteran.py  dec_gardner_knopoff.py  distance_time_windows.py  utils.py
seismostats/analysis/declustering/tests/: dec_afteran_test.py  dec_gardner_knopoff_test.py  distance_time_windows_test.py  test_distance_time_windows.py  utils_test.py
seismostats/analysis/estimate_b/: __init__.py  base.py  classic.py  positive.py  utils.py
seismostats/analysis/tests/: test_b_significant.py  test_estimate_a.py  test_estimate_beta.py  test_estimate_mc.py  test_ks_test.py  test_lillifors.py  test_magnitudes.py
seismostats/analysis/tests/data/: catalog_sed.csv  ks_ds.csv  test_empirical_cdf.p  test_estimate_mc.p  test_shi_bolt_confidence.p
seismostats/catalogs/: catalog.py  client.py  rategrid.py
seismostats/catalogs/catalog_templates/: quakeml.j2
seismostats/catalogs/tests/: test_catalog.py  test_client.py  test_openquake_conversion.py  test_rategrid.py
seismostats/io/: __init__.py  client.py  parser.py
seismostats/io/tests/: test_client.py  test_parser.py  wrong.xml
seismostats/plots/: __init__.py  basics.py  seismicity.py  statistical.py
seismostats/plots/tests/: test_basics.py  test_seismicity.py  test_statistical.py
seismostats/seismicity/: catalog.py  rategrid.py
seismostats/seismicity/catalog_templates/: quakeml.j2
seismostats/seismicity/tests/: test_catalog.py  test_rategrid.py
seismostats/utils/: __init__.py  _config.py  binning.py  coordinates.py  docs.py  filtering.py  simulate_distributions.py
seismostats/utils/tests/: test_binning.py  test_config.py  test_coordinate_transformer.py  test_filtering.py  test_require_cols.py  test_simulate_distributions.py
(+30 files in other folders)
