[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["seismostats*"]


[project]
name = "SeismoStats"
dynamic = ["version"]
description = "A Python Package for Statistical Seismology."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",

]
keywords = ["seismology", "statistics", "earthquake"]

requires-python = ">=3.10"

dependencies = [
    "cartopy>=0.23,<1",
    "geopandas>=0.14,<2",
    "jinja2>=3.1,<4",
    "matplotlib>=3.8,<4",
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "requests>=2.31,<3",
    "scipy>=1.11,<2",
    "shapely>=2.0,<3",
    "typing_extensions>=4.7",
    "statsmodels>=0.14,<1"
]


[project.optional-dependencies]
dev = [
    "build",
    "docutils==0.19",
    "flake8",
    "isort",
    "myst-parser",
    "nbsphinx-link",
    "nbsphinx",
    "pandoc",
    "pydata-sphinx-theme",
    "pytest-cov",
    "pytest",
    "responses",
    "setuptools-scm",
    "sphinx-autobuild",
    "sphinx",
    "tox",
    "twine",
]
openquake = ["openquake-engine", "numpy < 2", "fiona"]
jupyter = ["notebook"]


[project.urls]
Documentation = "https://seismostats.readthedocs.io/"
Repository = "https://github.com/swiss-seismological-service/SeismoStats"
Issues = "https://github.com/swiss-seismological-service/SeismoStats/issues"


[tool.setuptools_scm]
