[metadata]
name = catalog-tools
version = 0.1
description = Best Catalog Tools
license = GNU AFFERO GENERAL PUBLIC LICENSE

[options]
python_requires = >=3.10
packages = find:
install_requires =
    cartopy
    geopandas
    matplotlib
    numpy
    pandas
    scipy
    shapely
    

[options.packages.find]
include=catalog_tools*

[options.extras_require]
dev =
    autopep8
    flake8
    isort
    pytest
    pytest-cov
    responses
    tox
    
jupyter =
    notebook
