[metadata]
name = SeismoStats
version = 0.1
description = Library for statistical analysis of seismicity.
license = GNU AFFERO GENERAL PUBLIC LICENSE

[options]
python_requires = >=3.10
packages = find:
install_requires =
    cartopy
    geopandas
    jinja2
    requests
    scipy

[options.packages.find]
include=seismostats*

[options.package_data]
* =
  *.j2

[options.extras_require]
dev =
    flake8
    isort
    pytest
    pytest-cov
    responses
    tox
    
jupyter =
    notebook
